WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209660
[StressGC] ASSERTION FAILED: m_wrapper under WebCore::WebGLRenderingContextBase::dispatchContextLostEvent
https://bugs.webkit.org/show_bug.cgi?id=209660
Summary
[StressGC] ASSERTION FAILED: m_wrapper under WebCore::WebGLRenderingContextBa...
Chris Dumez
Reported
2020-03-27 10:18:23 PDT
ASSERTION FAILED: m_wrapper under WebCore::WebGLRenderingContextBase::dispatchContextLostEvent: ASSERTION FAILED: m_wrapper ./bindings/js/JSEventListener.h(123) : JSC::JSObject *WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext &) const 1 0x10f36f0b9 WTFCrash 2 0x1219db88b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x123b969f8 WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext&) const 4 0x123b95d1b WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 5 0x1241e387c WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::DumbPtrTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 6 0x1241dfb12 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 7 0x12425b4ba WebCore::Node::handleLocalEvents(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 8 0x1241ce180 WebCore::EventContext::handleLocalEvents(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) const 9 0x1241cec7b WebCore::dispatchEventInDOM(WebCore::Event&, WebCore::EventPath const&) 10 0x1241ce795 WebCore::EventDispatcher::dispatchEvent(WebCore::Node&, WebCore::Event&) 11 0x12425b50d WebCore::Node::dispatchEvent(WebCore::Event&) 12 0x1247674bc WebCore::WebGLRenderingContextBase::dispatchContextLostEvent() 13 0x12479de61 decltype(*(std::__1::forward<WebCore::WebGLRenderingContextBase*&>(fp0)).*fp()) std::__1::__invoke<void (WebCore::WebGLRenderingContextBase::*&)(), WebCore::WebGLRenderingContextBase*&, void>(void (WebCore::WebGLRenderingContextBase::*&&&)(), WebCore::WebGLRenderingContextBase*&&&) 14 0x12479dde0 std::__1::__bind_return<void (WebCore::WebGLRenderingContextBase::*)(), std::__1::tuple<WebCore::WebGLRenderingContextBase*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WebGLRenderingContextBase::*)(), std::__1::tuple<WebCore::WebGLRenderingContextBase*>, std::__1::tuple<> >::value>::type std::__1::__apply_functor<void (WebCore::WebGLRenderingContextBase::*)(), std::__1::tuple<WebCore::WebGLRenderingContextBase*>, 0ul, std::__1::tuple<> >(void (WebCore::WebGLRenderingContextBase::*&)(), std::__1::tuple<WebCore::WebGLRenderingContextBase*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) 15 0x12479dd8c std::__1::__bind_return<void (WebCore::WebGLRenderingContextBase::*)(), std::__1::tuple<WebCore::WebGLRenderingContextBase*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WebGLRenderingContextBase::*)(), std::__1::tuple<WebCore::WebGLRenderingContextBase*>, std::__1::tuple<> >::value>::type std::__1::__bind<void (WebCore::WebGLRenderingContextBase::*&)(), WebCore::WebGLRenderingContextBase*>::operator()<>() 16 0x12479dd29 WTF::Detail::CallableWrapper<std::__1::__bind<void (WebCore::WebGLRenderingContextBase::*&)(), WebCore::WebGLRenderingContextBase*>, void>::call() 17 0x1219e90fa WTF::Function<void ()>::operator()() const 18 0x124e9a719 WebCore::SuspendableTimer::fired() 19 0x124fe02ea WebCore::ThreadTimers::sharedTimerFiredInternal() 20 0x124fe7ec1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 21 0x124fe7e79 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 22 0x1219e90fa WTF::Function<void ()>::operator()() const 23 0x124fadff7 WebCore::MainThreadSharedTimer::fired() 24 0x125042486 WebCore::timerFired(__CFRunLoopTimer*, void*) 25 0x7fff4f3805d5 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 26 0x7fff4f380181 __CFRunLoopDoTimer 27 0x7fff4f37fcba __CFRunLoopDoTimers 28 0x7fff4f361304 __CFRunLoopRun 29 0x7fff4f360855 CFRunLoopRunSpecific 30 0x10a3b3a8b runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) 31 0x10a3b2c8a runTestingServerLoop()
Attachments
Patch
(11.84 KB, patch)
2020-03-27 10:26 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-03-27 10:18:34 PDT
<
rdar://problem/60541733
>
Chris Dumez
Comment 2
2020-03-27 10:26:04 PDT
Created
attachment 394726
[details]
Patch
EWS
Comment 3
2020-03-27 11:30:13 PDT
Committed
r259130
: <
https://trac.webkit.org/changeset/259130
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394726
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug