Source/WebCore/dom/TaskSource.h
@@ -38,6 +38,7 @@ enum class TaskSource : uint8_t {
     Networking,
     PostedMessageQueue,
     UserInteraction,
+    WebGL,
 
     // Internal to WebCore
     InternalAsyncTask, // Safe to re-order or delay.
