Source/WebCore/html/HTMLCanvasElement.cpp
@@ -113,18 +113,23 @@ static size_t maxActivePixelMemoryForTesting = 0;
 HTMLCanvasElement::HTMLCanvasElement(const QualifiedName& tagName, Document& document)
     : HTMLElement(tagName, document)
     , CanvasBase(IntSize(defaultWidth, defaultHeight))
+    , ActiveDOMObject(document)
 {
     ASSERT(hasTagName(canvasTag));
 }
 
 Ref<HTMLCanvasElement> HTMLCanvasElement::create(Document& document)
 {
-    return adoptRef(*new HTMLCanvasElement(canvasTag, document));
+    auto canvas = adoptRef(*new HTMLCanvasElement(canvasTag, document));
+    canvas->suspendIfNeeded();
+    return canvas;
 }
 
 Ref<HTMLCanvasElement> HTMLCanvasElement::create(const QualifiedName& tagName, Document& document)
 {
-    return adoptRef(*new HTMLCanvasElement(tagName, document));
+    auto canvas = adoptRef(*new HTMLCanvasElement(tagName, document));
+    canvas->suspendIfNeeded();
+    return canvas;
 }
 
 HTMLCanvasElement::~HTMLCanvasElement()
@@ -943,6 +948,11 @@ void HTMLCanvasElement::clearCopiedImage()
 {
     m_copiedImage = nullptr;
     m_didClearImageBuffer = false;
+}
+
+const char* HTMLCanvasElement::activeDOMObjectName() const
+{
+    return "HTMLCanvasElement";
 }
 
 }
